# searchgoat-hex

./: README.md  pyproject.toml  test_local.py
src/searchgoat_hex/: __init__.py  client.py  config.py  exceptions.py
tests/: __init__.py  test_client.py
